external-dns/service-l4.yaml
kind: Service
apiVersion: v1
metadata:
  name: ingress-nginx
  labels:
    app: ingress-nginx
  annotations:
    # Enable PROXY protocol
    service.beta.kubernetes.io/aws-load-balancer-proxy-protocol: '*'
    # Increase the ELB idle timeout to avoid issues with WebSockets or Server-Sent Events.
    service.beta.kubernetes.io/aws-load-balancer-connection-idle-timeout: '3600'
    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: 'arn:aws:acm:eu-west-1:458122280773:certificate/f89e0bb3-dbfc-4301-8426-d5df450684a9'
#    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: http

    # external-dns
    external-dns.alpha.kubernetes.io/hostname: ingress.kubernetes.howejones.xyz
spec:
  type: LoadBalancer
  selector:
    app: ingress-nginx
  ports:
  - name: http
    port: 80
    targetPort: http
  - name: https
    port: 443
    targetPort: http
