external-dns/aws-ingress.yml
# An Ingress with 2 hosts and 3 endpoints
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: helloworld-rules
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: helloworld-v1.kubernetes.howejones.xyz
    http:
      paths:
      - path: /
        backend:
          serviceName: helloworld-v1
          servicePort: 80
  - host: helloworld-v2.kubernetes.howejones.xyz
    http:
      paths:
      - path: /
        backend:
          serviceName: helloworld-v2
          servicePort: 80
